# Structure-Algorithms

./: .gitignore  CMakeLists.txt  main.c  readme.md
inc/: ADT_List.h  ADT_String.h  ADT_Tree.h  Base_Type.h  Function_Test.h  STACK_QUEUE.h  fifo.h  test.h
src/: ADT_List.c  ADT_String.c  ADT_Tree.c  ADT_Tree.h  CMakeLists.txt  Function_Test.c  STACK_QUEUE.c
